Native/Test/KL/error-boolean-and-lvalue.out
error-boolean-and-lvalue.kl:10:3: error: no definition found for function foo(Integer)
